--- a/plantilla/index.html
+++ b/plantilla/index.html
@@ -58,10 +58,14 @@
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
-							<h1 class="animated fadeInDown">An Exclusive, Premium HTML5 &amp; CSS3 Template by Peter Finlan, for Codrops.</h1>
+							<h1 class="animated fadeInDown">Confianza a nuestra comida.</h1>
 							<div class="container">
-								<input type="text" id="tokenin" name="tokeninput" placeholder="Ingresa tu token"></input>
-								<a href="#about" class="learn-btn animated fadeInUp">Buscar <i class="fa fa-arrow-down"></i></a>
+								<button type="button" class="sc-hJwwgy sc-iIQDRA jAMZMS sc-eiqfgm dcAyRp sc-bdVaJa foeZxU" color="#3F559B" height="60px" font-size="inherit" font-family="sansSerif" font-weight="4"><span><svg width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none">
+									<path d="M8.49 3.5L1.492.5l-1 3 2 8.5 18.995-.5 2-8-1.5-3-6.499 3H8.49z" fill="#763D16"></path>
+									<path d="M6.99 12h10.998v7H6.99v-7z" fill="#333"></path><path fill="#333" d="M7.99 17h5.998v3H7.99z"></path>
+									<path d="M1.581 10.664a.609.609 0 0 1 .126.585l-1.484 4.59a.517.517 0 0 0 0 .356l1.296 4.445c.104.334.438.522.752.417l4.452-1.231c.188-.063.397 0 .564.125l.773.626c.021.021.021.021.042.021l1.923 1.336c.104.062.23.104.355.104H13.6c.125 0 .25-.042.355-.104l1.923-1.336c.02 0 .02-.02.042-.02l.773-.627a.663.663 0 0 1 .564-.125l4.452 1.231c.335.084.669-.104.753-.417l1.295-4.445a.517.517 0 0 0 0-.355l-1.483-4.591a.599.599 0 0 1 .125-.585l1.588-7.116a.536.536 0 0 0-.02-.313L23.024.417c-.105-.334-.48-.5-.815-.375l-6.94 2.587a.744.744 0 0 1-.208.042H8.917c-.083 0-.146-.02-.209-.042L1.77.042c-.334-.126-.71.041-.815.375l-.92 2.818a.524.524 0 0 0-.02.313l1.567 7.116zm12.415 3.59l.522-1.085c.063-.126.23-.188.356-.126l1.254.564c.23.104.209.438-.042.522l-1.756.521a.285.285 0 0 1-.334-.396zm-.104-7.534c-.126-.105-.126-.313.02-.397l7.9-5.405a.252.252 0 0 1 .377.125l.982 2.692c.021.042.021.084 0 .147l-1.61 6.198a.226.226 0 0 1-.292.146l-4.347-1.169c-.042 0-.063-.02-.084-.042L13.891 6.72zm-3.825 12.814l.146-1.21c0-.063.042-.126.105-.168l.292-.208c.042-.021.084-.042.126-.042h2.466c.042 0 .104.02.125.042l.293.208c.063.042.083.105.104.167l.126 1.21a.243.243 0 0 1-.23.272h-3.344c-.105 0-.21-.125-.21-.271zM7.85 13.607l1.254-.564a.27.27 0 0 1 .356.126l.522 1.085c.105.208-.104.438-.334.375l-1.777-.521c-.23-.063-.25-.397-.02-.501zM.808 3.86c-.021-.042 0-.105 0-.146l.982-2.672c.063-.146.251-.208.376-.125l7.9 5.405a.244.244 0 0 1 .022.397L7.14 9.015a.159.159 0 0 1-.084.042L2.71 10.226a.226.226 0 0 1-.293-.146L.807 3.86z" fill="#F36D34"></path></svg>Conectar con MetaMask</span></button>
+								<!-- <input type="text" id="tokenin" name="tokeninput" placeholder="Ingresa tu token"></input>
+								<a href="#about" class="learn-btn animated fadeInUp">Buscar <i class="fa fa-arrow-down"></i></a> -->
 							</div>
 						</div>
 					</div>
@@ -92,19 +96,29 @@
 						<div class="features-slider">
 								<ul class="slides" id="featuresSlider">
 									<li>
-										<h1>The Fore-front of Design &amp; Technology</h1>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-										<p><a href="#features" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
+										<h1>¿Cómo se certifica la comida que consumes?</h1>
+										<p>Generalmente, son grandes empresas las que se encargan de "verificar" la calidad de los
+											alimentos. A gran escala, se compra al campesino y luego se distribuye a supermercados y
+										  	multinacionales. </p>
+										<p>La degradación de este proceso ha terminado en que este negocio se haya convertido en ocasiones en mafia, donde el dinero y los beneficios
+											se quedan en el medio, sin llegar a los productores.
+										</p>
+
 									</li>
 									<li>
-										<h1>Multi-Purpose User Centric Design</h1>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-										<p><a href="http://tympanus.net/codrops/?p=22554" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
+										<h1>¿Los campesinos son realmente bien remunerados?</h1>
+										<p>No. Su trabajo tiene que cumplir ciertos estandares para que sus cosechas sean aceptados
+											sin embargo este esfuerzo no se ve reflejado, los precios a los que se compran sus productos
+											son muy bajos, estos, al no tener una facilidad para su distribución y venta, terminan aceptando.
+										</p>
 									</li>
 									<li>
-										<h1>Made with Love, Released for Free</h1>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-										<p><a href="http://tympanus.net/codrops/?p=22554" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
+										<h1>Tecnificación de los cultivos</h1>
+										<p>Hay una gran oportunidad en colombia en la tecnificación de cultivos.
+											La integración de sensores con tecnología IOT pueden mejorar la calidad de los alimentos y reducir 
+											el tiempo invertido. Además de ser un puente para asegurar la calidad: a través de informes simples,
+											el comprador puede ver el crecimiento de la cosecha, como también las herramientas que se usaron y demás.
+										</p>
 									</li>
 								</ul>
 						</div>
@@ -122,8 +136,8 @@
 								<i class="fa fa-desktop"></i>
 							</div>
 							<div class="feature-content">
-								<h1>Responsive</h1>
-								<p>Built using HTML5/CSS3 and jQuery, and built using one of the world's most powerful CSS frameworks available, Bootstrap.</p>
+								<h1>Recolección de datos</h1>
+								<p>Se hace tracking del cultivo a través de sensores IOT que son tratados a través de Node RED</p>
 							</div>
 						</div>
 						<div class="col-md-4 feature-2 wp2 delay-05s">
@@ -131,8 +145,10 @@
 								<i class="fa fa-flash"></i>
 							</div>
 							<div class="feature-content">
-								<h1>Multi-Purpose</h1>
-								<p>Perfect if you run your own start-up, product or service. Boxify can showcase your business converting your visits to income.</p>
+								<h1>Tokenizado</h1>
+								<p>Se crea un NFT para la certificación del cultivo con el reporte de la cosecha, el cual contiene 
+									características como crecimiento, temperatura, salud, etc.
+								</p>
 								
 							</div>
 						</div>
@@ -141,8 +157,10 @@
 								<i class="fa fa-heart"></i>
 							</div>
 							<div class="feature-content">
-								<h1>Absolutely Free</h1>
-								<p>As aways, download Boxify for free exclusively from Codrops. If you love Boxify and want to thank me, simply <a href="http://peterfinlan.com/">buy me a beer</a>. </p>
+								<h1>Descentralización y pago justo</h1>
+								<p>Las entidades certificadoras ya no son necesarias, ya que la comunidad se regula a sí misma.
+									El dinero vuelve a los productores y la confiabilidad en los alimentos aumenta.
+								</p>
 								
 							</div>
 						</div>
@@ -261,7 +279,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="row">
+				<!-- <div class="row">
 					<ul class="grid">
 						<li>
 							<figure>
@@ -316,7 +334,7 @@
 							</figure>
 						</li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</section>
 		<section class="download" id="download">
@@ -342,8 +360,8 @@
 						<ul class="footer-nav">
 							<li><a href="#about">About</a></li>
 							<li><a href="#features">Features</a></li>
-							<li><a href="#screenshots">Screenshots</a></li>
-							<li><a href="#download">Download</a></li>
+							<li><a href="#screenshots">Photos</a></li>
+							<li><a href="#download">More about</a></li>
 						</ul>
 					</div>
 				</div>
